--- a/public/src/components/jointhecommunity/jointhecommunity.html
+++ b/public/src/components/jointhecommunity/jointhecommunity.html
@@ -1,3 +1,9 @@
-<div class="join">
-	JOIN THE COMMUNITY
+<div id="challenge-slider">
+	<div id="images">
+		<img src="{{ image.src }}" alt="" ng-repeat="image in images">
+	</div>
+  	<h1>Get Famous or Die Tryin'</h1>
+	<div class="join">
+		JOIN THE COMMUNITY
+	</div>
 </div>
