--- a/public/src/components/login/login.html
+++ b/public/src/components/login/login.html
@@ -1,10 +1,11 @@
 <div>
 	<h4>Login</h4>
 	<div class="login-form">
-		<form action="POST">
-			<input type="text" name="email" placeholder="Email">
-			<input type="password" name="password" placeholder="Password">
-			<input type="submit" name="submit">
+		<form novalidate>
+			<input ng-model="user.email" type="text" name="email" placeholder="Email">
+			<input type="password" 
+			ng-model="user.password" name="password" placeholder="Password">
+			<button ng-click="submitLogin()">Login</button>
 		</form>
 	</div>
 </div>
