--- a/public/src/assets/scss/styles.scss
+++ b/public/src/assets/scss/styles.scss
@@ -353,3 +353,80 @@ input[type='submit'] {
     background-color: rgba(0,0,0, .5);
     z-index: 10;
 }
+
+
+.profile-container {
+  
+  .left {
+    float: left;
+    width: 48%;
+    border-right: 1px #ccc solid;
+    display: flex;
+    margin-bottom: 20px;
+    
+    #profilepic {
+      height: 120px;
+      width: 120px;
+      background-color: #ccc;
+      border-radius: 100%;
+      
+    }
+    #profiledata {
+      margin-left: 10%;
+      
+      
+      h3 {
+        font-size: 1.5em;
+      }
+      h4 {
+        font-size: 1.1em;
+        font-weight: 100;
+      }
+    }
+    
+  }
+  
+  .right {
+    float: left;
+    
+    width: 48%;
+    
+    .pics {
+      width: 100%;
+      display: flex;
+    }
+    
+    #numbers {
+      display: flex;
+      
+    }
+    .infonumber {
+      width: 32%;
+      text-align: center;
+      font-size: 1.5em;    
+    }
+    
+    .infopic {
+      width: 32%;
+      text-align: center;
+      
+    }
+    
+    
+    .infoicon {
+      //background-color: #ccc;
+      height: 75px;
+      width: 75px;
+    }
+    
+
+    
+    
+  }  
+  
+  .profile-container-inner {
+     color: #999;
+     //font-size: 1em;
+     line-height: 1.5em;
+  }  
+}
